# level-builder-mvp

./: .filemap.json  .gitignore
.cursor/: AUTO_ACCEPT_RULES.md
.cursor/commands/: batch.md  begin-development.md  filemap-create.md  filemap-update.md  filemap-validate.md  one-shot.md  plan.md
.cursor/rules/: autonomous-execution.mdc  base.mdc  commit-workflow-strict.mdc  development-workflow.mdc  filemap-usage.mdc
_docs/: 02_technology_stack.md  03_space_json_schema.md  04_rbxlx_generation.md  05_technical_constraints.md  README.md  architecture.md  deployment.md  frontend-migration-task-list.md  prd.md  task-list.md
_docs/_boilerplate/: README.md  project-prompt-template.md
backend/: .gitignore  Cargo.toml  README.md
backend/src/: .filemap.json  .filemap.md  lib.rs  main.rs  models.rs  rbxlx.rs  validation.rs
backend/tests/: .filemap.json  .filemap.md  rbxlx_tests.rs  validation_tests.rs
memory-bank/: activeContext.md  productContext.md  progress.md  projectBrief.md  systemPatterns.md  techContext.md
scripts/: validate-project.sh  verify-context.sh
test-exports/: empty-export.rbxlx  roblox-default.rbxlx  roblox-single-part.rbxlx  roblox-spawn-baseplate.rbxlx
